# paperchat

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODOS.md  local-llm-service-spec.docx  package-lock.json
.claude/plans/: 2026-04-14-model-download-setup.md  desktop-chat-ui-overhaul.md  domain-structure-guide.md  frontend-ui-overhaul.md  installer-ux-improvements.md  launcher-and-folder-ingest.md  project-runtime.md  rag-ontology-optimization.md  supplementary-improvements.md  tailwind-migration.md  v5-2-issues-plan.md
.github/workflows/: build.yml
.husky/: pre-push
backend/: .env.example  .importlinter  paperchat-server.spec  pytest.ini  requirements-dev.txt  requirements.txt  server.py  setup.cfg
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/chat/: router.py  schemas.py  service.py
backend/app/core/: config.py  (+4 more)
backend/profiles/: internal-general.json  legal.json  private-equity.json  research.json
backend/prompts/: pe.ko.md
backend/schemas/: pe.yaml
desktop/: .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
desktop/src/: app.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: english.nsh  installer-hooks.nsh  korean.nsh
desktop/src-tauri/src/: lib.rs  main.rs
scripts/: generate-installer-bitmaps.py  remove-black-bg.py  upload-binaries.ps1  validate-tauri-build.sh
tests/: eval_rag.py  requirements.txt
tests/golden_set/: README.md  questions.json
(+71 files in other folders)
